# auto_trader

./: .dockerignore  .env.prod  .gitignore  .gitleaks.toml  .test_durations  AGENTS.md  ANALYSIS_REFACTOR_README.md  CHANGELOG.md  CLAUDE.md  Caddyfile  DEPLOYMENT.md  DOCKER_USAGE.md  Dockerfile.api  Dockerfile.caddy  Dockerfile.ws  E2E_MANUAL_TEST_GUIDE.md  E2E_TEST_VERIFICATION.md  ERROR_REPORTING_README.md  GEMINI.md  GITHUB_SETUP.md  GITHUB_TROUBLESHOOTING.md  HOLDINGS_README.md  HOST_SETUP.md  JSON_ANALYSIS_README.md  LOGGING_SETUP.md  MEMORY.md  METRICS_EXAMPLES.md  MIGRATION_GUIDE.md  MONITORING_README.md  Makefile  NATIVE_SETUP.md  PLAN.md  RASPBERRY_PI_DEPLOYMENT.md  README.md  README_SUBTASK_5_3.md  STOCK_INFO_GUIDE.md  SUBTASK_5_2_COMPLETION_REPORT.md  SUBTASK_5_2_SUMMARY.md  SUBTASK_5_3_CACHE_WARMUP_VERIFICATION.md  SUBTASK_5_3_COMPLETION_SUMMARY.md  (+96 more)
.circleci/: config.yml
.claude/: settings.readonly.json
.claude/commands/: crypto-alert-triage.md  fill-event-triage.md
.codex/environments/: environment.toml
.gemini/: GEMINI.md
.github/: pull_request_template.md
.github/workflows/: build-caddy.yml  debug-build.yml  (+9 more)
.sisyphus/: boulder.json
.smoke-out/: rob179-feed-research-evidence.json
.superset/: config.json
alembic/: env.py
app/: AGENTS.md  main.py  telegram_contract.py
backtest/: backtest.py  fetch_data.py  indicators.py  orchestrator.py  prepare.py  program.md  report.py  results.tsv  rsi_backtest.py  run_experiment.py  strategy.py
blog/: BLOG_IMAGE_GUIDE.md  IMAGE_PLACEMENT_GUIDE.md  IMAGE_PROMPTS.md  README.md  blog_10_manual_holdings.md  blog_11_mcp_server.md  blog_12_order_safety.md  blog_13_toss_openapi.md  blog_14_telegram_approval.md  blog_6_monitoring.md  blog_7_deployment.md  blog_8_authentication.md  blog_9_kis_trading.md  blog_brewdial_db_migrations.md  blog_db_design.md  blog_infra_2_python313_upgrade.md  blog_infra_3_python314_upgrade.md  blog_infra_4_ruff_pyright.md  blog_infra_5_openclaw.md  blog_infra_6_xdist_deadlock.md  blog_kis_api.md  blog_special_agent_workflow.md  blog_upbit.md  blog_upbit_web_trading.md  blog_uv_migration.md  blog_yfinance.md  convert_auth_svg_to_png.py  convert_deployment_svg_to_png.py  convert_kis_svg_to_png.py  convert_monitoring_svg_to_png.py  convert_svg_to_png.py  convert_svg_to_png_playwright.py  convert_svg_to_png_qlmanage.py  convert_svg_to_png_wand.py  generate_auth_svg.py  generate_deployment_svg.py  generate_monitoring_images.py  generate_monitoring_svg.py  test_kis_blog.py  test_kis_blog_simple.py  (+2 more)
config/: trading_policy.yaml
core/: config.py  scheduler.py
data/: AGENTS.md
design/: screener.pen
docs/: MONITORING_TESTING.md  VERIFICATION_SUMMARY.md  coingecko_cache_detailed_audit.md  invest-coverage-dashboard.md  invest-screener-toss-parity-matrix.md  kis-mock-tr-routing-matrix.md  manual_endpoint_verification.md  mcp_order_history_migration.md  n8n-api-reference.md  pre-market-news-briefing-pipeline.md  tvscreener-phase5-completion.md  tvscreener_deprecation_audit.md  verify_tvscreener_endpoints.sh
grafana-config/: grafana-datasources.yaml  loki.yaml  otel-collector.yaml  prometheus.yaml  promtail.yaml  tempo.yaml
jobs/: screener.py
n8n/: README.md
openclaw-skill/: SKILL.md
reports/: crypto-position-recheck-2026-07-11.md
research_contracts/: __init__.py  canonical_hash.py  diagnostic_evidence_policy.py  evaluation_windows.py  frozen_config.py  honest_offline_gate.py  jsonb_numbers.py  trial_evidence.py
routers/: dashboard.py  telegram.py
scripts/: AGENTS.md  DISCORD_E2E_TEST_README.md  backfill_daily_candles.py  backfill_news_related_symbols.py  binance_demo_scalping_benchmark.py  binance_demo_scalping_execute.py  binance_demo_scalping_signal.py  binance_demo_scalping_tick.py  binance_demo_scalping_ws_daemon.py  binance_demo_strategy_loop.py  binance_futures_demo_smoke.py  binance_public_smoke.py  binance_spot_demo_smoke.py  binance_testnet_lifecycle_smoke.py  binance_testnet_scalper_smoke.py  binance_testnet_seed_instruments.py  build_analyst_consensus_snapshots.py  build_financial_fundamentals_snapshots.py  build_invest_crypto_screener_snapshots.py  build_invest_kr_fundamentals_snapshots.py  build_invest_screener_snapshots.py  build_investor_flow_snapshots.py  build_market_quote_snapshots.py  build_market_valuation_snapshots.py  build_support_proximity_snapshot.py  build_us_fundamentals_snapshots.py  cio_quality_gate.py  debug_economic_calendar.py  deploy-native.sh  deploy-zero-downtime.sh  deploy.sh  diagnose_calendar_coverage.py  diagnose_invest_screener_snapshots.py  diagnose_invest_screener_toss_parity.py  diagnose_kr_dividend_conditions.py  diagnose_research_reports.py  fix_overseas_exchange_codes.py  free_social_sources_probe.py  healthcheck.sh  hermes_roundtrip_smoke.py  (+80 more)
services/: kis.py  telegram.py
signoz-config/: clickhouse-config-rpi.xml  clickhouse-config.xml  clickhouse-init.sql  otel-collector-config-rpi.yaml  otel-collector-config.yaml  prometheus.yml
tests/: AGENTS.md  __init__.py  _analysis_support.py  _db_retry.py  _investment_reports_helpers.py  _kis_tasks_support.py  _mcp_recommend_support.py  _mcp_screen_stocks_support.py  _mcp_tooling_support.py  _schema_bootstrap.py  _watch_events_helpers.py  _xdist_serial.py  conftest.py  market_events_test_helpers.py  mcp_tools.py  ohlcv_cache_fakes.py  test_admin_router.py  test_advisory_draft_profiles_config.py  test_agent_callback.py  test_agent_callback_auth.py  test_agent_gateway.py  test_ai_advisor.py  test_ai_markdown_router.py  test_ai_markdown_schemas.py  test_ai_markdown_service.py  test_alembic_revision_ids.py  test_alpaca_paper_config.py  test_alpaca_paper_dev_smoke_safety.py  test_alpaca_paper_fill_reconcile_smoke.py  test_alpaca_paper_isolation.py  test_alpaca_paper_orders_tools.py  test_alpaca_paper_sell_close_smoke.py  test_alpaca_paper_service_endpoint_guard.py  test_alpaca_paper_service_methods.py  test_alpaca_paper_smoke_safety.py  test_alpaca_paper_submit_boundary_safety.py  test_analysis.py  test_analysis_analyzer.py  test_analysis_artifact_mcp.py  test_analysis_artifact_web_read.py  (+797 more)
(+4441 files in other folders)
