[project]
name = "auto-trader"
version = "0.1.0"
description = ""
authors = [
    { name = "robin", email = "robin@watcha.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.125.0,<0.126.0",
    "uvicorn>=0.38.0,<0.39.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "pytz>=2025.2,<2026.0",
    "apscheduler>=3.11.0,<4.0.0",
    "pandas>=2.3.0,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "ta>=0.11.0,<0.12.0",
    "yfinance>=0.2.65,<0.3.0",
    "dart-fss>=0.4.13,<0.5.0",
    "pydantic>=2.12.0,<3.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "sqlalchemy[asyncio]>=2.0.45,<3.0.0",
    "alembic>=1.17.0,<2.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "redis>=5.2.0,<6.5.0",
    "google-genai>=1.30.0,<2.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.6,<0.1.0",
    "websockets>=15,<15.1",
    "celery[redis]>=5.6.0,<6.0.0",
    "flower>=2.0.1",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "email-validator>=2.0.0,<3.0.0",
    "itsdangerous>=2.0.0,<3.0.0",
    "pandas-stubs==2.3.2.250926",
    "slowapi>=0.1.9",
]

[dependency-groups]
test = [
    "pytest>=9.0.1,<9.1.0",
    "pytest-asyncio>=1.3.0,<1.4.0",
    "pytest-cov>=7.0.0,<7.1.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "fakeredis>=2.0.0,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
]
dev = [
    "black>=25.11.0,<25.12.0",
    "flake8>=7.3.0,<7.4.0",
    "isort>=7.0.0,<7.1.0",
    "mypy>=1.5.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "safety>=3.7.0,<3.8.0",
    "playwright>=1.56.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
