[project]
name = "auto-trader"
version = "0.1.0"
description = ""
authors = [
    { name = "robin", email = "robin@watcha.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn>=0.40.0,<0.41.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "pytz>=2025.2,<2026.0",
    "apscheduler>=3.11.0,<4.0.0",
    "pandas>=3.0.0,<3.1.0",
    "httpx>=0.28.1,<0.29.0",
    "ta>=0.11.0,<0.12.0",
    "yfinance>=1.1,<1.2",
    "dart-fss>=0.4.13,<0.5.0",
    "pydantic>=2.12.0,<3.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "sqlalchemy[asyncio]>=2.0.45,<3.0.0",
    "alembic>=1.17.0,<2.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "redis>=5.2.0,<6.5.0",
    "google-genai>=1.30.0,<2.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.6,<0.1.0",
    "websockets>=15,<15.1",
    "celery[redis]>=5.6.0,<6.0.0",
    "flower>=2.0.1",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "email-validator>=2.0.0,<3.0.0",
    "itsdangerous>=2.0.0,<3.0.0",
    "pandas-stubs==2.3.3.260113",
    "slowapi>=0.1.9",
    "fastmcp>=2.11.2,<3.0.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.1,<9.1.0",
    "pytest-asyncio>=1.3.0,<1.4.0",
    "pytest-cov>=7.0.0,<7.1.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "fakeredis>=2.0.0,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
]
dev = [
    "bandit>=1.7.0,<2.0.0",
    "safety>=3.7.0,<3.8.0",
    "playwright>=1.56.0",
    "ruff>=0.14.10",
    "pyright>=1.1.407",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".venv",
    "alembic/versions",
    "__pycache__",
    "data/stocks_info",
    "data/coins_info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E203",   # Whitespace before ':' (black compatible)
    "E501",   # Line too long (formatter handles this)
    "B008",   # FastAPI Depends() in default arguments
    "E712",   # SQLAlchemy == True comparison
    "B904",   # raise ... from err (FastAPI HTTPException pattern)
]

[tool.ruff.lint.per-file-ignores]
"app/core/celery_app.py" = ["E402"]  # Delayed import for Celery signals
"app/routers/kis_domestic_trading.py" = ["E402"]  # Delayed Celery import
"app/routers/kis_overseas_trading.py" = ["E402"]  # Delayed Celery import
"tests/conftest.py" = ["E402"]  # Delayed import after env setup

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "basic"

include = ["app"]
exclude = [
    "**/__pycache__",
    ".venv",
    "alembic",
    "tests",
    "data",
]

# Gradual migration settings
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

# Relaxed settings for gradual adoption
reportAttributeAccessIssue = false  # ta library has no type stubs
reportGeneralTypeIssues = false     # SQLAlchemy async session issues
reportArgumentType = false          # dict.get() returns Unknown | None
reportCallIssue = false             # Pydantic Field overloads
reportOptionalOperand = false       # Optional arithmetic
reportIndexIssue = false            # StockAnalysisResponse indexing
reportInvalidTypeForm = false       # Type form issues
